...
            "state": "translated",
            "value": "Miễn phí"
          }
        }
      }
    },
    "food.kibble": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Kibble"
          }
...
    },
    "food.title": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "What to feed?"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "喂点什么？"
...
    "onboard.pick.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Choose your pet"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "选择你的宠物"
...
